--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.91MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林), server: us1.nodegz.top, port: 443, type: trojan, password: 415a81c2-8a5c-37d1-8558-200be3c9cca9, sni: us1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-583.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇨🇳 中国-5.64MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇳🇱 荷兰-1.87MB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: silicon.starspace.link, port: 443, type: trojan, password: 4ZPDeqJ6g766UKDJ, sni: silicon.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-255.6KB/s(Youtube:不良林), server: 213.183.59.206, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
   - {name: 🇳🇱 荷兰-234.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-1.19MB/s(Youtube:不良林), server: 213.183.59.206, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇳🇱 荷兰-267.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-583.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.64MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-255.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-267.9KB/s(Youtube:不良林)
